code refactoring and introduction of Translate which computes the initial simulation state of an online simulation and can be replaced by TranslateIt.